pratique/2009-p2-f1-pontes.out-comp.txt
2009-p2-f1-pontes.cpp: In function ‘int dijkstra(int, int)’:
2009-p2-f1-pontes.cpp:16:29: error: ‘INT_MAX’ was not declared in this scope
   16 |     fill(dist, dist + 1005, INT_MAX);
      |                             ^~~~~~~
2009-p2-f1-pontes.cpp:5:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    4 | #include <queue>
  +++ |+#include <climits>
    5 | 
